--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "botbuilder": "^3.14.1",
     "dotenv": "^5.0.1",
+    "request": "^2.85.0",
     "restify": "^7.1.1"
   }
 }
