--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "homepage": "https://github.com/OlesZadorozhnyy/cabinet-searcher#readme",
   "dependencies": {
     "botbuilder": "^3.14.1",
-    "dotenv": "^5.0.1",
-    "request": "^2.85.0",
-    "restify": "^7.1.1"
+    "ejs": "^2.5.9",
+    "express": "^4.16.3",
+    "request": "^2.85.0"
   }
 }
