--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/OlesZadorozhnyy/cabinet-searcher#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "botbuilder": "^3.14.1",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
+    "method-override": "^2.3.10",
+    "mongodb": "^3.0.7",
     "request": "^2.85.0"
   }
 }
